--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pm": "pm2 start ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -19,6 +20,7 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "nodemailer": "^4.6.8"
   }
 }
